--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "osdp"
-version = "0.1.17"
+version = "0.1.18"
 description = "Rust implementation of the Open Supervised Device Protocol (OSDP)"
 license = "BSD-3-Clause"
 
@@ -16,4 +16,6 @@ hid-iclass-osdp-v1 = []
 hid-iclass-osdp-v2 = []
 
 [dependencies]
+num-traits = "0.2"
+num-derive = "0.3"
 crc16 = "^0.4.0"
