--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ hid-iclass-osdp-v2 = []
 num-traits = "0.2"
 num-derive = "0.3"
 thiserror = "1.0.40"
+bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "std"] }
